<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accueil"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/accueil" />
        <item
            android:id="@+id/nav_competences"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/competences" />
        <item
            android:id="@+id/nav_realisations"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/realisations" />
    </group>

    <item android:title="Fragment">
        <menu>
            <item
                android:id="@+id/nav_magiccircle"
                android:icon="@drawable/ic_filled_circle"
                android:title="MagicCircle" />
            <item
                android:id="@+id/nav_a_propos"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="A propos" />
        </menu>
    </item>

</menu>
