<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RealisationsActivity"
    tools:showIn="@layout/app_bar_realisations">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="4"
                android:useDefaultMargins="true">

                <android.support.v7.widget.CardView
                    android:id="@+id/aromaniceCardView"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:onClick="onCardViewClick"
                    app:cardCornerRadius="2dp">

                    <TextView
                        android:id="@+id/aromanice"
                        style="@style/CardText.Title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_200"
                        android:layout_marginTop="@dimen/spacing_24"
                        android:drawableTop="@drawable/ic_pied_reflexo"
                        android:gravity="center"
                        android:text="@string/aromanice" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/zultaniaCardView"
                    android:layout_width="0dp"
                    android:layout_row="1"
                    android:layout_rowSpan="2"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:onClick="onCardViewClick"
                    app:cardCornerRadius="@dimen/spacing_2">

                    <TextView
                        android:id="@+id/zultania"
                        style="@style/CardText.Title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_200"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/spacing_16"
                        android:drawableTop="@drawable/ic_zultania_logo"
                        android:gravity="center"
                        android:text="@string/zultania" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:id="@+id/mondialextincteurCardView"
                    android:onClick="onCardViewClick"
                    app:cardCornerRadius="@dimen/spacing_2">

                    <TextView
                        android:id="@+id/mondialextincteur"
                        style="@style/CardText.Title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_200"
                        android:layout_marginTop="@dimen/spacing_16"
                        android:drawableTop="@drawable/ic_fire_extinguisher"
                        android:gravity="center"
                        android:text="@string/mondialextincteur" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:id="@+id/yguerpCardView"
                    android:onClick="onCardViewClick"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    app:cardCornerRadius="@dimen/spacing_2">

                    <TextView
                        android:id="@+id/yguerp"
                        style="@style/CardText.Title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_200"
                        android:layout_marginTop="@dimen/spacing_16"
                        android:drawableTop="@drawable/ic_web_black_24dp"
                        android:gravity="center"
                        android:text="@string/yguerp" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    app:cardCornerRadius="@dimen/spacing_2">

                    <TextView
                        android:id="@+id/abcSession3"
                        style="@style/CardText.Title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_200"
                        android:layout_marginTop="@dimen/spacing_16"
                        android:drawableTop="@drawable/ic_android_logo"
                        android:gravity="center"
                        android:text="@string/incoming" />
                </android.support.v7.widget.CardView>
            </GridLayout>
    </FrameLayout>

</ScrollView>